# vest-token

./: CMakeLists.txt  README.md  testnet.md  testnet.template  vest.doxygen.in  vest.version.in  vest_build.sh  vest_install.sh  vest_uninstall.sh
CMakeModules/: FindWasm.cmake  MASSigning.cmake  VestioTester.cmake.in  VestioTesterBuild.cmake.in  additionalPlugins.cmake  cotire.cmake  doxygen.cmake  installer.cmake  wasm.cmake
Docker/: Dockerfile  README.md  cleos.sh  config.ini  docker-compose-latest.yml  docker-compose.yml  nodeosd.sh
debian/: postinst
plugins/: vestio-make_new_plugin.sh
plugins/history_plugin/: CMakeLists.txt  history_plugin.cpp
plugins/history_plugin/include/vestio/history_plugin/: account_control_history_object.hpp  history_plugin.hpp  public_key_history_object.hpp
programs/: CMakeLists.txt
scripts/: CMakeLists.txt  abigen.sh  clean_old_install.sh  vest_build_amazon.sh  vest_build_centos.sh  vest_build_darwin.sh  vest_build_fedora.sh  vest_build_ubuntu.sh  vestio-tn_bounce.sh  vestio-tn_down.sh  vestio-tn_roll.sh  vestio-tn_up.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  consensus-validation-malicious-producers.py  distributed-transactions-remote-test.py  distributed-transactions-test.py  impaired_network.py  lossy_network.py  nodvest_run_remote_test.py  nodvest_run_test.py  nodvest_under_min_avail_ram.py  nodvest_voting_test.py  p2p_network_test.py  p2p_stress.py  p2p_test_peers.py  restart-scenarios-test.py  testUtils.py  trans_sync_across_mixed_cluster_test.sh  validate-dirty-db.py  wallet_tests.cpp
(+140 files in other folders)
